--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
   <title>株式会社eSP｜eSPアカデミー</title>
   <meta name="description" content="株式会社eSPは『楽しい。だから、成長する。』を理念に、eスポーツ×教育のスクール事業やイベント運営を展開しています。" />
+  <meta name="google-site-verification" content="nTCAmbkoNi3SfP0WZD_blZkIZ8yi9DDhn2e4Rhx1bRQ" />
   <link rel="preload" as="image" href="assets/slide1.jpg">
   <style>
     :root{
@@ -436,3 +437,4 @@
   </script>
 </body>
 </html>
+
