--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="color-scheme" content="light dark" />
   <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
   <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <title>株式会社eSP｜eSPアカデミー</title>
+  <title>株式会社eSP</title>
   <meta name="description" content="株式会社eSPは『楽しい。だから、成長する。』を理念に、eスポーツ×教育のスクール事業やイベント運営を展開しています。" />
   <meta name="google-site-verification" content="nTCAmbkoNi3SfP0WZD_blZkIZ8yi9DDhn2e4Rhx1bRQ" />
   <link rel="preload" as="image" href="assets/slide1.jpg">
@@ -437,4 +437,5 @@
   </script>
 </body>
 </html>
+
 
