--- a/index.html
+++ b/index.html
@@ -1,14 +1,58 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-  <meta name="color-scheme" content="light dark" />
-  <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
-  <meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
-  <title>株式会社eSP｜eSPアカデミー</title>
-  <meta name="description" content="株式会社eSPは『楽しい。だから、成長する。』を理念に、eスポーツ×教育のスクール事業やイベント運営を展開しています。" />
-  <link rel="preload" as="image" href="assets/slide1.jpg">
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
+<meta name="color-scheme" content="light dark" />
+<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
+<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+
+
+<!-- ===== SEO 基本メタ ===== -->
+<title>株式会社eSP｜eスポーツ×教育のeSPアカデミー</title>
+<meta name="description" content="株式会社eSPは『楽しい。だから、成長する。』を理念に、eスポーツ×教育を通じて子どもたちの成長を支援するスクール事業・イベント運営を行っています。東京都・神奈川・埼玉・千葉・大阪で展開。" />
+<link rel="canonical" href="https://espcoltd.github.io/eSP/" />
+<meta name="robots" content="index,follow,max-image-preview:large" />
+
+
+<!-- ===== OGP / SNS共有設定 ===== -->
+<meta property="og:type" content="website">
+<meta property="og:site_name" content="株式会社eSP">
+<meta property="og:title" content="株式会社eSP｜eスポーツ×教育のeSPアカデミー">
+<meta property="og:description" content="『楽しい。だから、成長する。』— eスポーツ×教育で子どもたちの成長機会を創る。">
+<meta property="og:url" content="https://espcoltd.github.io/eSP/">
+<meta property="og:image" content="https://espcoltd.github.io/eSP/assets/ogp.jpg">
+<meta name="twitter:card" content="summary_large_image">
+
+
+<!-- ===== 構造化データ ===== -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Organization",
+"name": "株式会社eSP",
+"url": "https://espcoltd.github.io/eSP/",
+"logo": "https://espcoltd.github.io/eSP/assets/eSP3.png",
+"sameAs": [
+"https://twitter.com/eSP_academy2019",
+"https://www.instagram.com/esp_academy/",
+"https://www.facebook.com/eSP.academy.2019/"
+],
+"address": {
+"@type": "PostalAddress",
+"postalCode": "160-0023",
+"addressRegion": "東京都",
+"addressLocality": "新宿区西新宿3-9-7 フロンティア新宿タワーオフィス216"
+},
+"contactPoint": [{
+"@type": "ContactPoint",
+"contactType": "customer support",
+"email": "info@esp-academy.jp",
+"availableLanguage": ["ja"]
+}]
+}
+</script>
+  
   <style>
     :root{
       --accent:#00bbff;
@@ -436,3 +480,4 @@
   </script>
 </body>
 </html>
+
